# plotter

./: 0-latency.html  90-zone.html  CMakeLists.txt  README.md  Schermopname van 2026-04-23 13-04-37.webm  auto_mobile.html  bruijn  bruijn.html  dashboard.html  daydrift.html  hyperstate.html  hyprtkube.html  index.html  live-schaduw.html  luoshu.html  mobile.html  plotter.html  qua-grid.html  telemetrie.html  tijscrubber.html  uurhoek.html  viewpoort.html  vortax_radar.html  vortex.html  vortex_engine.py  vortex_mobile.html  weer.html  weerdrift.html  wereldklok.html
apps/: luoshu.html  luoshu_template.cpp  webrtc_sender.cpp
datapipe/stages/: analyze.py
datapipe_ccw_pipeline_bundle/: fix_run.py
datapipe_ccw_pipeline_bundle/data/normalized/2024-05-20/: atmospheric.csv  weather.csv
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/: README.md  pyproject.toml
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/.github/workflows/: daily_datapipe.yml
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/docs/: model_notes.md
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/scripts/: run_datapipe_daily.sh  safe_commit_and_push.sh
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/src/datapipe/: cli.py  config.py  io_utils.py  save_state.py  status.py
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/src/datapipe/debruijn/: lyndon.py  states.py
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/src/datapipe/ingest/: knmi.py  noaa.py
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/src/datapipe/model/: combined.py  disturbance.py  estimate.py  recover.py  score.py
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/src/datapipe/normalize/: daily.py
datapipe_ccw_pipeline_bundle/datapipe_ccw_bundle/src/datapipe/publish/: report.py
src/: webrtc_sender.cpp
vortex_routing_engine/src/: vortex_engine.py
(+71 files in other folders)
