[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapipe-ccw"
version = "0.1.0"
description = "Staged datapipe with Lyndon de Bruijn model, exponential disturbance estimation, and ccw outputs"
requires-python = ">=3.11"
dependencies = ["pandas>=2.2", "numpy>=1.26"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
